03:<fix>: <left alignment fixed>
<Fixed the left alignment of the first paragraph. >

--- a/mod2_solution/css/style.css
+++ b/mod2_solution/css/style.css
@@ -5,52 +5,36 @@
   padding: 0px;
 }
 h1 {
-  margin-top: 5%;
-  margin-bottom: 5%;
+  margin-top: 10%;
+  margin-bottom: 10%;
   text-align: center;
-  font-size:50px;
+  font-size:35px;
 }
-/* .p1, .p2, .p3{
-margin-bottom: 50%;
-} */
-.p1 {
+.p1, .p2, .p3{
   border: 1px solid black;
   background-color: #53e925;
   width: 100%;
   height: 100%;  
-  padding: 50px 10px 20px 10px;
+  padding: 60px 20px 20px 20px;
   font-family: Helvetica;
   color: black;
-  margin-right: 20px; 
-
+  font-size:20px;
 }
-.p3 {
-  border: 1px solid black;
-  background-color: #ec2cbc;
-  width: 100%;
-  height: 100%;  
-  padding: 50px 10px 20px 10px;
- 
-  font-family: Helvetica;
-  color: black;;
+.p1 { 
+  background-color: #53e925; 
+}
+.p3 {  
+  background-color: #ec2cbc;  
 }
 
-.p2 {
-  border: 1px solid black;
+.p2 {  
   background-color: #2ec9c1;
-  width: 100%;
-  height: 100%;  
-  padding: 50px 10px 20px 10px;  
-  font-family: Helvetica;
-  color: black;
-  margin-right: 20px; 
-  
 }
 
 .Beef{  
   float: right;
   border: 1px solid black;  
-  font-size:  30px;
+  font-size:  25px;
   text-align: center;  
   width: 150px;
   background-color: #ec2cbc;
@@ -60,7 +44,7 @@ margin-bottom: 50%;
 .Sushi{
   float: right;
   border: 1px solid black;  
-  font-size:  30px;
+  font-size:  25px;
   text-align: center;
   width: 150px;
   background-color: #53e925;
@@ -70,7 +54,7 @@ margin-bottom: 50%;
 .chicken{
   float: right;
   border: 1px solid black;  
-  font-size:  30px;
+  font-size:  25px;
   text-align: center;
   width: 150px; 
   background-color: #2ec9c1;
@@ -79,6 +63,7 @@ margin-bottom: 50%;
 /* Simple Responsive Framework. */
 .row {
   width: 100%;  
+  padding: 0 10px;
 }
 
 /********** Large devices only **********/
@@ -181,3 +166,10 @@ margin-bottom: 50%;
         
   }
 }
+ .col-lg-4, .col-md-6, .col-s-1 {
+   padding: 0 20px;  
+
+}
+.col-md-6, .col-s-1 {
+   padding: 0 20px 20px;  
+} 
